--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:wght@400;700&display=swap');
+
 *,
-* body {
-    background-color: aqua;
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+:root {
+    --background-neutral: #f1e9dc;
+    --background-incorrect: #ea560e;
+    --background-correct: #9cd0ff;
+}
+
+html,
+body {
+    --background: var(--background-neutral);
+    position: relative;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
+    font-size: larger;
+    color: #4a4644;
+
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background);
+}
+
+body.correct {
+    --background: var(--background-correct);
+}
+
+
+body.incorrect {
+    --background: var(--background-incorrect);
 }
